--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -43,3 +43,13 @@ monolog:
 
 #swiftmailer:
 #    delivery_address: me@example.com
+
+hautelook_alice:
+  db_drivers:
+    orm: true
+    mongodb: false
+    phpcr: false
+  locale: en_EN
+  seed: 1
+  persist_once: false
+  loading_limit: 5
