--- a/.travis.yml
+++ b/.travis.yml
@@ -6,14 +6,8 @@ services:
   - mysql
 
 before_script:
-  - mysql -e 'create database symfony;'
-  - cp app/config/parameters.yml.dist app/config/parameters.yml
-  - composer self-update
-  - composer install --dev --no-interaction --prefer-source
-  - app/console cache:warmup --env=test --quiet
   - composer self-update
   - composer install
 
 script:
-  - app/console doctrine:schema:update --force
-  - phpunit -c app/
+  - phpunit -c app
